--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <main class="content" data-form-type="card">
-      <a href="https://befitting-gravel-fenugreek.glitch.me/" class="btn">
+      <a href="https://github.com/sohilsharma0910/latest_resume/raw/2f05fd8b8737f617b903cfff7ffbf23c61662064/resume_latest.pdf
+" class="btn">
         <span class="btn__circle"></span>
         <span class="btn__white-circle">
           <svg xmlns="http://www.w3.org/2000/svg" id="icon-arrow-right" viewBox="0 0 21 12">
